[package]
name = "ipod_tone_player_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ipod_tone_player_utils = { path = "../common" }

# GUI
egui = "0.25.0"
eframe = "0.25.0"

# For image loading
egui_extras = { version = "0.25.0", features = ["all_loaders"] }

# File picker dialog
egui_file = "0.14.0"